--- a/contactus.html
+++ b/contactus.html
@@ -12,7 +12,7 @@
         <a href="index.html"><h1>Ahmeds Electronica</h1></a><br>
         <a href="mobile.html">Mobile</a>
         <a href="Tablet.html">Tablets</a>
-        <a href="aboutus.html">About Us</a>
+        <a href="Aboutus.html">About Us</a>
         <a href="contactus.html">Contact Us</a>
     </div>
 
