--- a/Tablet.html
+++ b/Tablet.html
@@ -12,7 +12,7 @@
         <a href="index.html"><h1>Ahmeds Electronica</h1></a><br>
         <a href="mobile.html">mobile</a>
         <a href="Tablet.html">tablets</a>
-        <a href="Aboutus.html">about Us</a>
+        <a href="Aboutus.html">About Us</a>
         <a href="contactus.html">contact Us</a>
     </div>
     <div class="products">
